# pseudocode

./: .gitignore  Cargo.toml  README.md  good.proceduralimp  test.ji
crates/pseudocode/: Cargo.toml
crates/pseudocode/src/: expr.rs  instruction.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  statement.rs  type_checker.rs  util.rs
crates/pseudocode_cli/: Cargo.toml
crates/pseudocode_cli/src/: error_handling.rs  main.rs
examples/: branching.structuredimp  even.jumpyimp  even.structuredimp  fibonacci.proceduralimp  fibonacci.recursiveimp
src/: epic_token.rs  expr.rs  instruction.rs  interpreter.rs  lexer.rs  lexer_old.rs  lib.rs  main.rs  parser.rs  test.rs  token.rs  type_checker.rs  util.rs
