[package]
name = "pseudocode"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
chumsky = { version = "0.12.0", features = ["pratt"] }
clap = { version = "4.5.54", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from"] }
logos = "0.16.0"
thiserror = "2.0.17"

[lib]
name = "pseudocode"
